--- a/_includes/docs_ad.html
+++ b/_includes/docs_ad.html
@@ -4,7 +4,7 @@
 {% if thisPage == 'introduction' %}
 
 	<strong><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp; New Training Courses</strong><br /><br />
-	Learn industry best practices and master Kubernetes networking with Tigera's instructor-led training.<br /><br />
+	Learn industry best practices and master Kubernetes networking and security with instructor-led training.<br /><br />
 	<a href="https://tigera.io/training" target="_blank" style="color: #f69432;">View Courses</a>
 
 {% else %}
